# aesiron

./: .gitignore  Dockerfile  Makefile  README.md  aesiron-cli.sh  compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
apps/build_keeper/: LOCAL_NETWORK_ACCESS.md
apps/build_keeper/app/: app.py
apps/build_keeper/app/core/: equipment_manager.py  settings.py
apps/build_keeper/app/data/: equipment_sets.json
apps/example/: .env.example
apps/example/app/.streamlit/: config.toml
specs/: AGENTS.md  internal-dns-routing-spec.md
src/: AGENTS.md
src/aesiron/: cli.py  core.py
src/aesiron.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aesiron/application/: __init__.py  commands.py  dto.py  views.py
src/aesiron/domain/: __init__.py  errors.py
src/aesiron/services/: __init__.py  armory.py  docker.py  infra.py  scaffold.py  status.py
src/aesiron/template/: .env.example  Dockerfile  Makefile  Makefile.root  compose.yml
src/aesiron/template/app/: app.py
src/aesiron/template/app/.streamlit/: config.toml
template/: .env.example  Makefile  compose.yml
template/app/: app.py
tests/: test_application.py  test_cli.py  test_core.py  test_docker_service.py  test_infra_service.py  test_status_service.py
