[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aesiron"
version = "0.5.4"
description = "A CLI tool to forge and manage multiple Streamlit apps with Docker."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "rich",
    "docker",
    "jinja2",
]

[project.scripts]
aesiron = "aesiron.cli:app"
iron = "aesiron.cli:app"

[tool.setuptools.package-data]
"aesiron" = ["template/**/*", "template/**/.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
